fix: image is overflowing on app-image

--- a/client/src/components/app-image/app-image.scss
+++ b/client/src/components/app-image/app-image.scss
@@ -20,6 +20,8 @@ app-image {
     align-items: center;
     justify-content: center;
     img {
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain;
     }
   }
